* cleanup and typo removal

--- a/config.json
+++ b/config.json
@@ -22,5 +22,5 @@
       "language": "swedish"
     }
   ],
-  "message": "The %s message for the day is %s. It means %s."
+  "message": "The %s word for the day is %s. It means %s."
 }
