--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,11 @@
         </plugins>
     </build>
     <dependencies>
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.11.2</version>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/rome/rome -->
         <dependency>
             <groupId>rome</groupId>
